// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attachment doesn't exist in source.attachment 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {},
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isAttachment": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "type": "attachment",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`attachment exists in source.attachment 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {},
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isAttachment": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "type": "attachment",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`attachment works with query params (doesn't exist in source.attachment) 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {},
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-1/attachment-1/?some=param": Object {
      "id": 1,
      "isAttachment": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "type": "attachment",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`attachment works with query params (exists in source.attachment) 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {},
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-1/attachment-1/?some=param": Object {
      "id": 1,
      "isAttachment": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "type": "attachment",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`page doesn't exist in source.page 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "type": "page",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`page exists in source.page 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "type": "page",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`page works with query params (doesn't exist in source.page) 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "page",
    },
    "/page-1/?some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "type": "page",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`page works with query params (exists in source.page) 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "page",
    },
    "/page-1/?some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "type": "page",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`post doesn't exist in source.post 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "tag",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`post exists in source.post 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "tag",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`post fetchs from a different endpoint with extra params 1`] = `
Array [
  Array [
    Object {
      "endpoint": "multiple-post-type",
      "params": Object {
        "_embed": true,
        "slug": "cpt-11",
        "type": Array [
          "post",
          "cpt",
        ],
      },
    },
  ],
]
`;

exports[`post fetchs from a different endpoint with extra params 2`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "12": Object {
      "author": 1,
      "id": 12,
      "link": "/cpt/cpt-11/attachment-cpt-11/",
      "slug": "attachment-cpt-11",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "cpt": Object {
    "11": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          12,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 12,
      "id": 11,
      "link": "/cpt/cpt-11/",
      "slug": "cpt-11",
      "tags": Array [
        1,
      ],
      "type": "cpt",
    },
  },
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/cpt/cpt-11/": Object {
      "id": 11,
      "isCpt": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "type": "cpt",
    },
    "/cpt/cpt-11/attachment-cpt-11/": Object {
      "id": 12,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "tag",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {
    "type": Array [
      "post",
      "cpt",
    ],
  },
  "post": Object {},
  "postEndpoint": "multiple-post-type",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`post works with query params (doesn't exist in source.post) 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/?some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "tag",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`post works with query params (exists in source.post) 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/?some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "tag",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`post works with types embedded 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "tag",
    },
    "undefined": Object {
      "isFetching": false,
      "isReady": false,
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "type": Array [
          "post",
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {
    "post": Object {
      "description": "",
      "hierarchical": false,
      "name": "Posts",
      "slug": "post",
      "taxonomies": Array [
        "category",
        "tag",
      ],
    },
  },
}
`;

exports[`postType returns 404 if not found 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {},
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/non-existent/": Object {
      "errorStatus": 404,
      "errorStatusText": "post type from endpoints \\"posts,pages,media\\" with slug \\"non-existent\\" not found",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`postType should contain the correct error code on error 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {},
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/post-1/": Object {
      "errorStatus": 400,
      "errorStatusText": "statusText",
      "is400": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;
